--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+* {
+  margin: 0;
+  border-sizing: border-box;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
